// Jest Snapshot v1, https://goo.gl/fbAQLP

<<<<<<< HEAD
exports[`app/MenuButtons <Publish> matches the snapshot for an error 1`] = `
<div
  class="menuButtonsPublishUpload"
  data-testid="MenuButtonsPublish-container"
>
=======
exports[`app/MenuButtons share and save buttons matches the snapshot when done symbolicating 1`] = `
Array [
>>>>>>> parent of 337d6a08... Symbolicate profiles at load time if they're not symbolicated (Merge PR #1522)
  <div
    class="menuButtonsPublishUploadTop"
  >
    <div
      class="menuButtonsPublishUploadTitle"
    >
      Publishing profile…
    </div>
    <div
      class="menuButtonsPublishUploadPercentage"
    >
      0%
    </div>
    <div
      class="menuButtonsPublishUploadBar"
    >
      <div
        class="menuButtonsPublishUploadBarInner"
        style="width: 0%;"
      />
    </div>
  </div>
  <div
    class="menuButtonsPublishButtons"
  >
    <button
      class="photon-button menuButtonsPublishButton menuButtonsPublishButtonsDownload menuButtonsPublishButtonDisabled"
      type="button"
    >
      Compressing…
    </button>
    <button
      class="photon-button photon-button-default menuButtonsPublishButton menuButtonsPublishButtonsCancelUpload"
      type="button"
    >
      Cancel Upload
    </button>
  </div>
</div>
`;

exports[`app/MenuButtons <Publish> matches the snapshot for the closed state 1`] = `
<div>
  <div
    class="buttonWithPanel menuButtonsMetaInfoButton"
  >
    <div
      class="buttonWithPanelButtonWrapper"
    >
      <input
        class="buttonWithPanelButton menuButtonsMetaInfoButtonButton"
        type="button"
        value="Firefox () "
      />
    </div>
    <div
      class="arrowPanelAnchor"
    >
      <div
        class="arrowPanel arrowPanelOpenMetaInfo"
      >
        <div
<<<<<<< HEAD
          class="arrowPanelArrow"
        />
=======
          class="buttonWithPanelButtonWrapper"
        >
          <input
            class="buttonWithPanelButton menuButtonsShareButtonButton"
            type="button"
            value="Share..."
          />
        </div>
        <div
          class="arrowPanelAnchor"
        >
          <div
            class="arrowPanel hasTitle hasButtons menuButtonsPrivacyPanel"
          >
            <div
              class="arrowPanelArrow"
            />
            <h1
              class="arrowPanelTitle"
            >
              Upload Profile – Privacy Notice
            </h1>
            <div
              class="arrowPanelContent"
            >
              <section
                class="privacyNotice"
              >
                <p>
                  You’re about to upload your profile publicly where anyone will be able to access it. To better diagnose performance problems profiles include the following information:
                </p>
                <ul>
                  <li>
                    The URLs of all painted tabs, and running scripts.
                  </li>
                  <li>
                    The metadata of all your add-ons to identify slow add-ons.
                  </li>
                  <li>
                    Firefox build and runtime configuration.
                  </li>
                </ul>
                <p>
                  To view all the information you can download the full profile to a file and open the json structure with a text editor.
                </p>
                <p>
                  By default, the URLs of all network requests will be removed while sharing the profile
        but keeping the URLs may help to identify the problems. Please select the checkbox
        below to share the URLs of the network requests:
                </p>
              </section>
              <p
                class="menuButtonsShareNetworkUrlsContainer"
              >
                <label>
                  <input
                    class="menuButtonsShareNetworkUrlsCheckbox"
                    type="checkbox"
                    value="on"
                  />
                  Share the URLs of all network requests
                </label>
              </p>
            </div>
            <div
              class="arrowPanelButtons"
            >
              <input
                class="arrowPanelCancelButton"
                type="button"
                value="Cancel"
              />
              <input
                class="arrowPanelOkButton"
                type="button"
                value="Share"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="buttonWithPanel menuButtonsProfileDownloadButton"
    >
      <div
        class="buttonWithPanelButtonWrapper"
      >
        <input
          class="buttonWithPanelButton menuButtonsProfileDownloadButtonButton"
          type="button"
          value="Save as file…"
        />
      </div>
      <div
        class="arrowPanelAnchor"
      >
        <div
          class="arrowPanel hasTitle menuButtonsProfileDownloadPanel"
        >
          <div
            class="arrowPanelArrow"
          />
          <h1
            class="arrowPanelTitle"
          >
            Save Profile to a Local File
          </h1>
          <div
            class="arrowPanelContent"
          >
            <section />
          </div>
        </div>
      </div>
    </div>
    <a
      class="menuButtonsLink"
      href="/docs/"
      target="_blank"
      title="Open the documentation in a new window"
    >
      Docs…
    </a>
  </div>,
]
`;

exports[`app/MenuButtons share and save buttons matches the snapshot when starting to symbolicate 1`] = `
Array [
  <div
    class="menuButtonsOpenMetaInfoButtonBox"
  >
    <div
      class="menuButtonsOpenMetaInfoButtonLabel"
    >
      <span
        class="menuButtonsOpenMetaInfoButtonLabelOverflow"
      >
        Firefox (48.0) Intel Mac OS X 10.11
      </span>
    </div>
    <div
      class="buttonWithPanel menuButtonsOpenMetaInfoButtonButton"
    >
      <div
        class="buttonWithPanelButtonWrapper"
      >
        <input
          class="buttonWithPanelButton menuButtonsOpenMetaInfoButtonButtonButton"
          type="button"
          value=" "
        />
      </div>
      <div
        class="arrowPanelAnchor"
      >
        <div
          class="arrowPanel arrowPanelOpenMetaInfo"
        >
          <div
            class="arrowPanelArrow"
          />
          <div
            class="arrowPanelContent"
          >
            <h2
              class="arrowPanelSubTitle"
            >
              Timing
            </h2>
            <div
              class="arrowPanelSection"
            >
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Recording started:
                </span>
                Sat, 09 Apr 2016 17:02:32 GMT
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Interval:
                </span>
                1
                ms
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Profile Version:
                </span>
                22
              </div>
            </div>
            <h2
              class="arrowPanelSubTitle"
            >
              Application
            </h2>
            <div
              class="arrowPanelSection"
            >
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Name:
                </span>
                Firefox
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Version:
                </span>
                48.0
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Build ID:
                </span>
                20181126165837
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Extensions:
                </span>
                <ul
                  class="metaInfoList"
                />
              </div>
            </div>
            <h2
              class="arrowPanelSubTitle"
            >
              Platform
            </h2>
            <div
              class="arrowPanelSection"
            >
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Platform:
                </span>
                Macintosh
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  OS:
                </span>
                Intel Mac OS X 10.11
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  ABI:
                </span>
                x86_64-gcc3
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="menuButtons"
  >
    <div
      class="menuButtonsCompositeButtonContainer currentButtonIsShareButton"
      data-testid="menuButtonsCompositeButtonContainer"
    >
      <div
        class="buttonWithPanel menuButtonsShareButton"
      >
        <div
          class="buttonWithPanelButtonWrapper"
        >
          <input
            class="buttonWithPanelButton menuButtonsShareButtonButton"
            disabled=""
            type="button"
            value="Sharing will be enabled once symbolication is complete"
          />
        </div>
        <div
          class="arrowPanelAnchor"
        >
          <div
            class="arrowPanel hasTitle hasButtons menuButtonsPrivacyPanel"
          >
            <div
              class="arrowPanelArrow"
            />
            <h1
              class="arrowPanelTitle"
            >
              Upload Profile – Privacy Notice
            </h1>
            <div
              class="arrowPanelContent"
            >
              <section
                class="privacyNotice"
              >
                <p>
                  You’re about to upload your profile publicly where anyone will be able to access it. To better diagnose performance problems profiles include the following information:
                </p>
                <ul>
                  <li>
                    The URLs of all painted tabs, and running scripts.
                  </li>
                  <li>
                    The metadata of all your add-ons to identify slow add-ons.
                  </li>
                  <li>
                    Firefox build and runtime configuration.
                  </li>
                </ul>
                <p>
                  To view all the information you can download the full profile to a file and open the json structure with a text editor.
                </p>
                <p>
                  By default, the URLs of all network requests will be removed while sharing the profile
        but keeping the URLs may help to identify the problems. Please select the checkbox
        below to share the URLs of the network requests:
                </p>
              </section>
              <p
                class="menuButtonsShareNetworkUrlsContainer"
              >
                <label>
                  <input
                    class="menuButtonsShareNetworkUrlsCheckbox"
                    type="checkbox"
                    value="on"
                  />
                  Share the URLs of all network requests
                </label>
              </p>
            </div>
            <div
              class="arrowPanelButtons"
            >
              <input
                class="arrowPanelCancelButton"
                type="button"
                value="Cancel"
              />
              <input
                class="arrowPanelOkButton"
                type="button"
                value="Share"
              />
            </div>
          </div>
        </div>
>>>>>>> parent of 337d6a08... Symbolicate profiles at load time if they're not symbolicated (Merge PR #1522)
      </div>
    </div>
  </div>
  <div
    class="menuButtons"
  >
    <div
      class="buttonWithPanel menuButtonsShareButton"
    >
      <div
        class="buttonWithPanelButtonWrapper"
      >
        <input
          class="buttonWithPanelButton menuButtonsShareButtonButton"
          type="button"
          value="Publish…"
        />
      </div>
      <div
        class="arrowPanelAnchor"
      >
        <div
          class="arrowPanel menuButtonsPublishPanel"
        >
          <div
            class="arrowPanelArrow"
          />
        </div>
      </div>
    </div>
    <a
      class="menuButtonsLink"
      href="/docs/"
      target="_blank"
      title="Open the documentation in a new window"
    >
      Docs
      <i
        class="open-in-new"
      />
    </a>
  </div>
</div>
`;

exports[`app/MenuButtons <Publish> matches the snapshot for the completed upload panel 1`] = `
<div
  class="menuButtonsPublishUpload"
  data-testid="MenuButtonsPublish-container"
>
  <div
    class="menuButtonsPublishUploadTop"
  >
    <div
      class="menuButtonsPublishUploadTitle"
    >
      Publishing profile…
    </div>
    <div
      class="menuButtonsPublishUploadPercentage"
    >
      0%
    </div>
    <div
      class="menuButtonsPublishUploadBar"
    >
      <div
        class="menuButtonsPublishUploadBarInner"
        style="width: 0%;"
      />
    </div>
  </div>
  <div
    class="menuButtonsPublishButtons"
  >
    <button
      class="photon-button menuButtonsPublishButton menuButtonsPublishButtonsDownload menuButtonsPublishButtonDisabled"
      type="button"
    >
      Compressing…
    </button>
    <button
      class="photon-button photon-button-default menuButtonsPublishButton menuButtonsPublishButtonsCancelUpload"
      type="button"
    >
      Cancel Upload
    </button>
  </div>
</div>
`;

exports[`app/MenuButtons <Publish> matches the snapshot for the opened panel for a nightly profile 1`] = `
<div
  data-testid="MenuButtonsPublish-container"
>
  <form
    class="menuButtonsPublishContent"
  >
    <div
      class="menuButtonsPublishIcon"
    />
    <h1
      class="menuButtonsPublishTitle"
    >
      Share Performance Profile
    </h1>
    <p
      class="menuButtonsPublishInfoDescription"
    >
      Upload your profile and make it accessible to anyone with the link.
       This profile is from Firefox Nightly, so by default all information is included.
    </p>
    <h3>
      Include additional data that may be identifiable
    </h3>
    <div
      class="menuButtonsPublishDataChoices"
    >
      <label
        class="photon-label menuButtonsPublishDataChoicesLabel"
      >
        <input
          checked=""
          class="photon-checkbox photon-checkbox-default"
          name="includeHiddenThreads"
          type="checkbox"
        />
        Include hidden threads
      </label>
      <label
        class="photon-label menuButtonsPublishDataChoicesLabel"
      >
        <input
          checked=""
          class="photon-checkbox photon-checkbox-default"
          name="includeFullTimeRange"
          type="checkbox"
        />
        Include hidden time range
      </label>
      <label
        class="photon-label menuButtonsPublishDataChoicesLabel"
      >
        <input
          checked=""
          class="photon-checkbox photon-checkbox-default"
          name="includeScreenshots"
          type="checkbox"
        />
        Include screenshots
      </label>
      <label
        class="photon-label menuButtonsPublishDataChoicesLabel"
      >
        <input
          checked=""
          class="photon-checkbox photon-checkbox-default"
          name="includeUrls"
          type="checkbox"
        />
        Include resource URLs
      </label>
      <label
        class="photon-label menuButtonsPublishDataChoicesLabel"
      >
        <input
          checked=""
          class="photon-checkbox photon-checkbox-default"
          name="includeExtension"
          type="checkbox"
        />
        Include extension information
      </label>
    </div>
    <div
      class="menuButtonsPublishButtons"
    >
      <button
        class="photon-button menuButtonsPublishButton menuButtonsPublishButtonsDownload menuButtonsPublishButtonDisabled"
        type="button"
      >
        Compressing…
      </button>
      <button
        class="photon-button photon-button-primary menuButtonsPublishButton menuButtonsPublishButtonsUpload"
        type="submit"
      >
        <span
          class="menuButtonsPublishButtonsSvg menuButtonsPublishButtonsSvgUpload"
        />
        Publish
      </button>
    </div>
  </form>
</div>
`;

exports[`app/MenuButtons <Publish> matches the snapshot for the opened panel for a release profile 1`] = `
<div
  data-testid="MenuButtonsPublish-container"
>
  <form
    class="menuButtonsPublishContent"
  >
    <div
      class="menuButtonsPublishIcon"
    />
    <h1
      class="menuButtonsPublishTitle"
    >
      Share Performance Profile
    </h1>
    <p
      class="menuButtonsPublishInfoDescription"
    >
      Upload your profile and make it accessible to anyone with the link.
       By default, your personal data is removed.
    </p>
    <h3>
      Include additional data that may be identifiable
    </h3>
    <div
      class="menuButtonsPublishDataChoices"
    >
      <label
        class="photon-label menuButtonsPublishDataChoicesLabel"
      >
        <input
          class="photon-checkbox photon-checkbox-default"
          name="includeHiddenThreads"
          type="checkbox"
        />
        Include hidden threads
      </label>
      <label
        class="photon-label menuButtonsPublishDataChoicesLabel"
      >
        <input
          class="photon-checkbox photon-checkbox-default"
          name="includeFullTimeRange"
          type="checkbox"
        />
        Include hidden time range
      </label>
      <label
        class="photon-label menuButtonsPublishDataChoicesLabel"
      >
        <input
          class="photon-checkbox photon-checkbox-default"
          name="includeScreenshots"
          type="checkbox"
        />
        Include screenshots
      </label>
      <label
        class="photon-label menuButtonsPublishDataChoicesLabel"
      >
        <input
          class="photon-checkbox photon-checkbox-default"
          name="includeUrls"
          type="checkbox"
        />
        Include resource URLs
      </label>
      <label
        class="photon-label menuButtonsPublishDataChoicesLabel"
      >
        <input
          class="photon-checkbox photon-checkbox-default"
          name="includeExtension"
          type="checkbox"
        />
        Include extension information
      </label>
    </div>
    <div
      class="menuButtonsPublishButtons"
    >
      <button
        class="photon-button menuButtonsPublishButton menuButtonsPublishButtonsDownload menuButtonsPublishButtonDisabled"
        type="button"
      >
        Compressing…
      </button>
      <button
        class="photon-button photon-button-primary menuButtonsPublishButton menuButtonsPublishButtonsUpload"
        type="submit"
      >
        <span
          class="menuButtonsPublishButtonsSvg menuButtonsPublishButtonsSvgUpload"
        />
        Publish
      </button>
    </div>
  </form>
</div>
`;

exports[`app/MenuButtons <Publish> matches the snapshot for the uploading panel 1`] = `
<div
  class="menuButtonsPublishUpload"
  data-testid="MenuButtonsPublish-container"
>
  <div
    class="menuButtonsPublishUploadTop"
  >
    <div
      class="menuButtonsPublishUploadTitle"
    >
      Publishing profile…
    </div>
    <div
      class="menuButtonsPublishUploadPercentage"
    >
      0%
    </div>
    <div
      class="menuButtonsPublishUploadBar"
    >
      <div
        class="menuButtonsPublishUploadBarInner"
        style="width: 0%;"
      />
    </div>
  </div>
  <div
    class="menuButtonsPublishButtons"
  >
    <button
      class="photon-button menuButtonsPublishButton menuButtonsPublishButtonsDownload menuButtonsPublishButtonDisabled"
      type="button"
    >
      Compressing…
    </button>
    <button
      class="photon-button photon-button-default menuButtonsPublishButton menuButtonsPublishButtonsCancelUpload"
      type="button"
    >
      Cancel Upload
    </button>
  </div>
</div>
`;
